--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -887,21 +887,8 @@ main[data-cart] section>article>header>input {
 /* Checkout page */
 main[data-checkout] {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   gap: 20px;
-}
-
-main[data-checkout] > div {
-  min-height: 500px;
-  max-height: 100%;
-  width: 30%;
-  background-color: #801524;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 2.5%;
 }
 
 main[data-checkout] > div > input {
