Load book data in book modify page.

--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1246,6 +1246,7 @@ main[data-book_modify] section > form > input {
 
 main[data-book_modify] section form fieldset {
   width: 70%;
+  border-radius: 7px;
 }
 
 main[data-book_modify] section form fieldset ul {
