--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1372,6 +1372,73 @@ main[data-orders] section > article > footer > input:hover{
   font-weight: bold;
   cursor: pointer;
 }
+/* Order expanded page */
+
+
+main[data-order_expanded] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+main[data-order_expanded] h1 {
+  font-size: 30px;
+  color: #801524;
+}
+
+
+main[data-order_expanded] article{
+  width: 80%;
+  background-color: #fff;
+  color: #801524;
+  border-radius: 6px;
+  box-shadow: 0 3px 5px #888;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap: 8px;
+}
+
+main[data-order_expanded] article > header{
+  border-bottom: 2px #801524 solid;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+main[data-order_expanded] article > div{
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  gap: 20px;
+}
+
+main[data-order_expanded] article > footer{
+  border-top: 2px #801524 solid;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+main[data-order_expanded] article span{
+  font-weight: bold;
+}
+
+main[data-order_expanded] article figure {
+  margin: 0;
+}
+
+main[data-order_expanded] article figure img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
 
 /* Mobile version styles */
 @media (width <=768px) {
