--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1377,7 +1377,6 @@ main[data-orders] section > article > footer > input:hover{
 
 main[data-order_expanded] {
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 20px;
 }
@@ -1387,6 +1386,29 @@ main[data-order_expanded] h1 {
   color: #801524;
 }
 
+main[data-order_expanded] div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main[data-order_expanded] div p {
+  color: white;
+  font-size: 20px;
+}
+
+
+main[data-order_expanded] section {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+main[data-order_expanded] section > p {
+  display: none;
+}
 
 main[data-order_expanded] article{
   width: 80%;
@@ -1400,7 +1422,7 @@ main[data-order_expanded] article{
   gap: 8px;
 }
 
-main[data-order_expanded] article > header{
+main[data-order_expanded] section > article > header{
   border-bottom: 2px #801524 solid;
   padding: 5px;
   display: flex;
@@ -1408,14 +1430,22 @@ main[data-order_expanded] article > header{
   justify-content: space-between;
 }
 
-main[data-order_expanded] article > div{
+main[data-order_expanded] section > article > div{
+  color: #801524;
+  font-size: unset;
   display: flex;
   flex-direction: row;
+  align-items: unset;
   height: 100px;
   gap: 20px;
 }
 
-main[data-order_expanded] article > footer{
+main[data-order_expanded] section > article > div > p{
+  color: #801524;
+  font-size: unset;
+}
+
+main[data-order_expanded] section > article > footer{
   border-top: 2px #801524 solid;
   padding: 5px;
   display: flex;
@@ -1423,18 +1453,19 @@ main[data-order_expanded] article > footer{
   justify-content: end;
 }
 
-main[data-order_expanded] article span{
+main[data-order_expanded] span{
   font-weight: bold;
 }
 
 main[data-order_expanded] article figure {
   margin: 0;
+  max-height: 70px;
+  max-width: 70px;
 }
 
 main[data-order_expanded] article figure img {
   display: block;
   width: 100%;
-  height: 100%;
   object-fit: cover;
   border-radius: 4px;
 }
@@ -1634,6 +1665,22 @@ main[data-order_expanded] article figure img {
     margin: 0 auto;
     display: block;
     font-weight: bold;
+  }
+
+  main[data-order_expanded] div{
+    display: none;
+  }
+
+  main[data-order_expanded] section{
+    width: 100%;
+  }
+
+  main[data-order_expanded] section > p{
+    display: flex;
+    flex-direction: row;
+    
+    color: #801524;
+    font-size: 20px;
   }
 
   /* Index php styling */
