--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -1374,8 +1374,6 @@ main[data-orders] section > article > footer > input:hover{
 }
 
 /* Vendor order page */
-/* User orders page */
-
 main[data-user_orders]{
   display: flex;
   flex-direction: column;
@@ -1461,7 +1459,7 @@ main[data-user_orders] section > article > footer > input:hover{
   cursor: pointer;
 }
 
-/* Order expanded page */
+/* User Order expanded page */
 main[data-order_expanded] {
   display: flex;
   flex-direction: column;
@@ -1526,6 +1524,94 @@ main[data-order_expanded] article figure img {
   border-radius: 4px;
 }
 
+/* Vendor user order expanded page */
+main[data-user_order_expanded] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+main[data-user_order_expanded] h1 {
+  font-size: 30px;
+  color: #801524;
+}
+
+main[data-user_order_expanded] article{
+  width: 80%;
+  background-color: #fff;
+  color: #801524;
+  border-radius: 6px;
+  box-shadow: 0 3px 5px #888;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  gap: 8px;
+}
+
+main[data-user_order_expanded] article > header{
+  border-bottom: 2px #801524 solid;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+main[data-user_order_expanded] article > div{
+  display: flex;
+  flex-direction: row;
+  height: 100px;
+  gap: 20px;
+}
+
+main[data-user_order_expanded] article > footer{
+  border-top: 2px #801524 solid;
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+
+main[data-user_order_expanded] article span{
+  font-weight: bold;
+}
+
+main[data-user_order_expanded] article figure {
+  margin: 0;
+}
+
+main[data-user_order_expanded] article figure img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+main[data-user_order_expanded] div>a,
+main[data-user_order_expanded] div>input,
+main[data-user_order_expanded] div>button {
+  font-size: 20px;
+  height: 30px;
+  color: white;
+  background-color: #801524;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px, white, solid;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+main[data-user_order_expanded] div>a:hover,
+main[data-user_order_expanded] div>input:hover,
+main[data-user_order_expanded] div>button:hover {
+  font-weight: bold;
+  border: 2px, white, solid;
+}
 
 /* Mobile version styles */
 @media (width <=768px) {
