--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -743,6 +743,39 @@ main[data-profile] section>a:hover {
   border: 2px, white, solid;
 }
 
+/* Notifcations */
+main[data-notifications]{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+}
+
+main[data-notifications] > article{
+  background-color: #d9d9d9;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+main[data-notifications] > article > footer > p > span{
+  font-weight: bold;
+}
+
+main[data-notifications] > article > footer > p {
+  font-size: 18px;
+}
+
+main[data-notifications] > article > header > h2{
+  font-size: 20px;
+  font-weight: bold;
+  color: #801524;
+}
+
 /* Customer's cart page */
 
 main[data-cart] {
